--- a/EstructurasSecuencialesDeProgramacion/ejercicio1.html
+++ b/EstructurasSecuencialesDeProgramacion/ejercicio1.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="./ejercicio1.js" defer></script>
-    <title>Entrada de Datos por Teclado - Ejercicio1</title>
+    <script src="./ejercicio1.js" defer></script>
+    <title>Estructuras Secuenciales - Ejercicio 1</title>
   </head>
   <body>
-    <p id=reUsuario"></p>
-    <p id="emailUsuario"></p>
+    <p id="ancho"></p>
+    <p id="altura"></p>
+    <p id="area"></p>
   </body>
 </html>
