--- a/clase_date/ejercicio1.html
+++ b/clase_date/ejercicio1.html
@@ -8,7 +8,7 @@
   <body>
     <script>
       const fecha = new Date("2021, 8, 9");
-      let mensajeFecha = function generarMensaje(fechaTransformar) {
+      let mensajeFecha = function (fechaTransformar) {
         let opciones = {
           weekday: "long",
           year: "numeric",
