--- a/array_densos/ejercicio1.html
+++ b/array_densos/ejercicio1.html
@@ -5,11 +5,10 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="./ejercicio1.js" defer></script>
+	<script src="ejercicio1.js" defer></script>
 </head>
 
 <body>
-	
 </body>
 
 </html>
